	- edi-entries: edi-35 partially implemented
	- added: new optional params to 'jack' -> 'jack,clientname,portprefix';
		 replaces old interfaces 'jack_auto', 'jack_generic' 
		 and 'jack_alsa'; see ecasound(1) for more details
	- added: eiam - new commands 'jack-connect', 'jack-disconnect'
	 	 and 'jack-list-connections'; see ecasound-iam(1) for
		 details
	- changed: deprecated 'jack_auto', 'jack_generic' and
	           'jack_alsa'
	- changed: numbering of JACK ports created with 'jack' and
	 	   'jack_generic' starts from "_1" separately for 
		   each prefix [dsacre]
        - changed: deprecated 'ai-wave-edit', 'ao-wave-edit' commands
		   and the 'ext-cmd-wave-editor' ecasoundrc field
	- fixed: do not limit max-gain reported by '-ev' to [1,max]
		 value range
        - fixed: avoid denormal numbers in '-ete' (leads to unusually
		 high CPU load)
	- fixed: dump-cop-value did not work as documented
	- fixed: ECI - signal an error (e.g. eci_error() returns true)
		 if connection is lost to engine process (sync lost
	 	 or an other error)
	- fixed: ecasignalview - exit if engine reports an error
		 during operation
24082008 (v2.5.2) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_2_relnotes.txt
	- fixed: bug in channel routing of LADSPA plugins that have
		 more audio output ports than input ports
21082008 (v2.5.1) -** stable release **-
	- more verbose description of change available at:
                 http://eca.cx/relnotes/ecasound_v2_5_1_relnotes.txt
	- fixed: a last minute change in 2.5.0 that caused build errors
	 	 with gcc-4.3.1 if ALSA support is disabled
	- fixed: a change in 2.5.0 how process cleanup is initiated from 
		 the signal handler caused severe problems on some 
		 systems when ecasound was interrupted with e.g. 
	         ctrl-c/SIGINT; worst case was a crashed X session which
	         is of course really, really bad